# barcode_generator

./: .pre-commit-config.yaml  README.md  bcgenerator.py  bcgenerator_pdf.py  example.csv  makefile  pyproject.toml  requirements.txt
